--- a/drinks.html
+++ b/drinks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>My Recipe Book | Meals</title>
+      <title>My Recipe Book | Drinks</title>
        <link rel="stylesheet" href="style.css">
        <link rel="stylesheet" href="fontAwesome/css/all.css">
     </head>
@@ -18,11 +18,11 @@
             <div id="meals">
                 <div class="meals-list">
             
-                    <a href="grilledcheese.html">
+                    <a href="milkshake.html">
                     <div class="meals-list-items">
-                     <h1>Grilled Cheese Sandwich<i class="fa fa-chevron-right"></i></h1>
+                     <h1>Strawberry Milkshake<i class="fa fa-chevron-right"></i></h1>
                         
-                        <p>Extra cheesy grilled cheese sandwich</p>
+                        <p>Creamy strawberry milkshake</p>
                     </div> 
                     </a>
                 </div>
